fixes styling on small screen again

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -412,8 +412,8 @@
         padding: 0 1rem 0 1rem
 
     .menuIcon
-        left: 1.5rem
-        top: 6rem
+        left: 1rem
+        top: 5rem
 
     .welcomeP
         background-color: transparent
@@ -423,7 +423,7 @@
         margin: auto
         right: 0
         text-align: center
-        top: 15rem
+        top: 18rem
 
     .welcomeP span
         background-color: transparent
